<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="udacity.com.bakingapp.fragment.MasterRecipesDetailsFragment">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ingredients_card"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="4dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="2dp">

        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/ingredients_list" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
