<resources>
    <string name="app_name">Baking App</string>

    <string name="hello_blank_fragment">blank fragment</string>
    <string name="menu_refresh">Atualizar</string>
    <string name="pause">Parar</string>
    <string name="play">Iniciar</string>
    <string name="restart">Reiniciar</string>
    <string name="guess">Guess</string>
    <string name="notification_text">Notificação de Texto</string>
    <string name="ingredients_list">Clique aqui para lista de ingredientes</string>
    <string name="appwidget_text">Widget</string>
    <string name="add_widget">Adicionar widget</string>
    <string name="ingredient_list_empty">Sem ingredientes</string>
    <string name="empty_string">Sem dados</string>
    <string name="internet_error">Erro na conexão, tente de novo</string>
    <string name="next">Próximo</string>
    <string name="previos">Anterior</string>

    <string name="pref_recipe_label">Escolha sua receita favorita</string>
    <string name="pref_recipe_nutella_pie_label">Nutella Pie</string>
    <string name="pref_recipe_brownies_label">Brownies</string>
    <string name="pref_recipe_yellow_cake_label">Yellow Cake</string>
    <string name="pref_recipe_cheese_cake_label">Cheese Cake</string>

    <string name="pref_recipe_key" translatable="false">receita</string>

    <string name="pref_recipe_nutella_pie_value" translatable="false">nutellapie</string>
    <string name="pref_recipe_brownies_value" translatable="false">brownies</string>
    <string name="pref_recipe_yellow_cake_value" translatable="false">yellowcake</string>
    <string name="pref_recipe_cheese_cake_value" translatable="false">cheesecake</string>
    <string name="action_settings">Settings</string>
    <string name="widget_error_message">Error loading Data, Check your internet Connection!</string>

</resources>
